--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Welcome to the AI poem generator</h1>
+
+    <footer>This was coded by Rita Bern and is <a href="https://github.com/finnocino/ai-poem-generator" target="_blank">open-sourced on GitHub</a> and is hosted on <a href="https://cool-ai-poem-generator.netlify.app/">Netlify</a></footer>
    <script src="src/index.js"></script>
 </body>
 </html>
