--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
     <title> AI Poem Generator</title>
 </head>
 <body>
-    <h1>Welcome to the AI poem generator</h1>
-
+    <header>
+         <h1>AI poem generator</h1>
+    </header>
+    <main>
+        <form>
+           <input type="text" placeholder="Type to generate a poem" autofocus required autocomplete="off"/>
+           <input type="submit"/>
+        </form>
+    <div>
+        A cat might sit up in a tree
+        <br/>
+        And be as guiltless as could be,
+    </div>
+     </main>
+ <br>
     <footer>This was coded by Rita Bern and is <a href="https://github.com/finnocino/ai-poem-generator" target="_blank">open-sourced on GitHub</a> and is hosted on <a href="https://cool-ai-poem-generator.netlify.app/">Netlify</a></footer>
    <script src="src/index.js"></script>
 </body>
