--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <title> AI Poem Generator</title>
 </head>
 <body>
+    <div class="container">
     <header>
-         <h1>AI poem generator</h1>
+         <h1>AI Poem Generator</h1>
     </header>
     <main>
         <form>
-           <input type="text" placeholder="Type to generate a poem" autofocus required autocomplete="off"/>
-           <input type="submit"/>
+           <input type="text" placeholder="Type to generate a poem" autofocus required autocomplete="off" class="ai-instructions"/>
+           <input type="submit" class="submit-button"/>
         </form>
-    <div>
+    <div class="ai-poem">
         A cat might sit up in a tree
         <br/>
         And be as guiltless as could be,
@@ -23,6 +24,7 @@
      </main>
  <br>
     <footer>This was coded by Rita Bern and is <a href="https://github.com/finnocino/ai-poem-generator" target="_blank">open-sourced on GitHub</a> and is hosted on <a href="https://cool-ai-poem-generator.netlify.app/">Netlify</a></footer>
-   <script src="src/index.js"></script>
+   </div>
+    <script src="src/index.js"></script>
 </body>
 </html>
