--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style.css">
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <title> AI Poem Generator</title>
 </head>
 <body>
@@ -12,15 +13,11 @@
          <h1>AI Poem Generator</h1>
     </header>
     <main>
-        <form>
+        <form id="poem-generator-form">
            <input type="text" placeholder="Type to generate a poem" autofocus required autocomplete="off" class="ai-instructions"/>
            <input type="submit" class="submit-button"/>
         </form>
-    <div class="ai-poem">
-        A cat might sit up in a tree
-        <br/>
-        And be as guiltless as could be,
-    </div>
+    <div class="ai-poem" id="poem"></div>
      </main>
  <br>
     <footer>This was coded by Rita Bern and is <a href="https://github.com/finnocino/ai-poem-generator" target="_blank">open-sourced on GitHub</a> and is hosted on <a href="https://cool-ai-poem-generator.netlify.app/">Netlify</a></footer>
