--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style.css">
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <title> AI Poem Generator</title>
 </head>
 <body>
@@ -14,7 +15,7 @@
     </header>
     <main>
         <form id="poem-generator-form">
-           <input type="text" placeholder="Type to generate a poem" autofocus required autocomplete="off" class="ai-instructions"/>
+           <input type="text" placeholder="Type to generate a poem" autofocus required autocomplete="off" class="ai-instructions" id="user-instructions"/>
            <input type="submit" class="submit-button"/>
         </form>
     <div class="ai-poem" id="poem"></div>
