--- a/index.html
+++ b/index.html
@@ -12,14 +12,24 @@
     <div class="container">
     <header>
          <h1>AI Poem Generator</h1>
-    </header>
-    <main>
-        <form id="poem-generator-form">
-           <input type="text" placeholder="Type to generate a poem" autofocus required autocomplete="off" class="ai-instructions" id="user-instructions"/>
-           <input type="submit" class="submit-button"/>
-        </form>
-    <div class="ai-poem" id="poem"></div>
-     </main>
+      </header>
+      <main>
+        <div class="form-container">
+          <form id="poem-generator-form">
+             <input type="text" placeholder="Type a topic to generate a poem" 
+             autofocus 
+             required 
+             autocomplete="off" 
+             class="ai-instructions" 
+             id="user-instructions"/>
+              <input type="submit" class="submit-button"/>
+              
+          </form>
+          <div class="hint">i.e. Animals, Nature, etc...</div>
+       </div>
+        <div class="poem hidden generating" id="poem"></div>
+    </div>
+    </main>
  <br>
     <footer>This was coded by Rita Bern and is <a href="https://github.com/finnocino/ai-poem-generator" target="_blank">open-sourced on GitHub</a> and is hosted on <a href="https://cool-ai-poem-generator.netlify.app/">Netlify</a></footer>
    </div>
