--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <div class="container">
     <header>
-         <h1>AI Poem Generator</h1>
+         <h1>Poem Generator</h1>
       </header>
       <main>
         <div class="form-container">
           <form id="poem-generator-form">
-             <input type="text" placeholder="Type a topic to generate a poem" 
+             <input type="text" placeholder="Type a topic..." 
              autofocus 
              required 
              autocomplete="off" 
